# windbg-ext-mcp

./: .gitignore  README.md  install_client_config.py  pyproject.toml
artifacts/windows/x64/Release/: windbgmcpExt.dll.sha256
mcp_server/: __init__.py  config.py  selftest.py  server.py
mcp_server/core/: __init__.py  communication.py  context.py  error_handler.py  retry_utils.py  server_initialization.py  session_recovery.py  unified_cache.py  validation.py
mcp_server/core/async_ops/: __init__.py  batch_executor.py  monitoring.py  task_manager.py  utilities.py
mcp_server/core/execution/: __init__.py  executor.py  result.py  strategies.py  timeout_resolver.py
mcp_server/core/hints/: __init__.py  data_structures.py  definitions.py  validator.py
mcp_server/core/performance/: __init__.py  command_optimizer.py  compression.py  coordinator.py  streaming.py
mcp_server/tests/: test_command_validation.py  test_install_client_config_dryrun.py  test_message_protocol.py  test_timeout_resolver.py  test_tools_registry.py  test_unified_execution.py
mcp_server/tools/: __init__.py  analysis_tools.py  execution_tools.py  performance_tools.py  session_tools.py  support_tools.py  tool_utilities.py
